--- a/work.html
+++ b/work.html
@@ -570,7 +570,7 @@
 				HREF="http://www.bipm.fr/"><IMG BORDER="2" WIDTH="120" HEIGHT="119"
 				SRC="images/bipm.gif"></A> </FONT></TD> 
 			 <TD VALIGN="top" WIDTH="20%"><FONT FACE="Trebuchet MS"><A
-				HREF="http://www.bipm.fr/"><STRONG>B</STRONG>ureau
+				HREF="http://www.bipm.org/"><STRONG>B</STRONG>ureau
 				<STRONG>I</STRONG>nternational des <STRONG>P</STRONG>oids et
 				<STRONG>M</STRONG>esures (International Office of Weights and Measures)</A>
 				</FONT></TD> 
