--- a/jqe2014.html
+++ b/jqe2014.html
@@ -16,7 +16,7 @@
 		</TR> 
 	 </TABLE><BR> 
 	 <UL> 
-		<LI><A HREF="jqe2014/image1.jpg">Photo 1</A></LI>
+		<LI><A HREF="jqe2014/image1.jpg">Photo 1</A><IMG SRC="jqe2014/image1.jpg"></LI>
 		<LI><A HREF="jqe2014/image2.jpg">Photo 2</A></LI> 
 		<LI><A HREF="jqe2014/image3.jpg">Photo 3</A></LI> 
 		<LI><A HREF="jqe2014/image4.jpg">Photo 4</A></LI> 
