--- a/qphotosupps/volume3/image03.html
+++ b/qphotosupps/volume3/image03.html
@@ -18,9 +18,9 @@
 		<TR> 
 		  <TD WIDTH="75" ALIGN="CENTER" HEIGHT="600"><A
 			 HREF="image02.html">Back<BR>02/21</A></TD> 
-		  <TD WIDTH="750" ALIGN="CENTER" HEIGHT="600"><IMG
+		  <TD WIDTH="750" ALIGN="CENTER" HEIGHT="600"><a href="../images/large/volume3/image3.jpg"><IMG
 			 SRC="../images/normal/volume3/image03.jpg" WIDTH="412" HEIGHT="600"
-			 BORDER="0"></TD> 
+			 BORDER="0"></a></TD> 
 		  <TD WIDTH="75" ALIGN="CENTER" HEIGHT="600"><A
 			 HREF="image04.html">Next<BR>04/21</A></TD> 
 		</TR> 
