--- a/qphotosupps/volume3/image13.html
+++ b/qphotosupps/volume3/image13.html
@@ -18,9 +18,9 @@
 		<TR> 
 		  <TD WIDTH="75" ALIGN="CENTER" HEIGHT="600"><A
 			 HREF="image12.html">Back<BR>12/21</A></TD> 
-		  <TD WIDTH="750" ALIGN="CENTER" HEIGHT="600"><IMG
+		  <TD WIDTH="750" ALIGN="CENTER" HEIGHT="600"><a href="../images/large/volume3/image13.jpg"><IMG
 			 SRC="../images/normal/volume3/image13.jpg" WIDTH="750" HEIGHT="510"
-			 BORDER="0"></TD> 
+			 BORDER="0"></a></TD> 
 		  <TD WIDTH="75" ALIGN="CENTER" HEIGHT="600"><A
 			 HREF="image14.html">Next<BR>14/21</A></TD> 
 		</TR> 
