--- a/qphotosupps/volume3/image14.html
+++ b/qphotosupps/volume3/image14.html
@@ -18,9 +18,9 @@
 		<TR> 
 		  <TD WIDTH="75" ALIGN="CENTER" HEIGHT="600"><A
 			 HREF="image13.html">Back<BR>13/21</A></TD> 
-		  <TD WIDTH="750" ALIGN="CENTER" HEIGHT="600"><IMG
+		  <TD WIDTH="750" ALIGN="CENTER" HEIGHT="600"><a href="../images/large/volume3/image14.jpg"><IMG
 			 SRC="../images/normal/volume3/image14.jpg" WIDTH="750" HEIGHT="517"
-			 BORDER="0"></TD> 
+			 BORDER="0"></a></TD> 
 		  <TD WIDTH="75" ALIGN="CENTER" HEIGHT="600"><A
 			 HREF="image15.html">Next<BR>15/21</A></TD> 
 		</TR> 
