--- a/qphotosupps/volume3/image18.html
+++ b/qphotosupps/volume3/image18.html
@@ -18,9 +18,9 @@
 		<TR> 
 		  <TD WIDTH="75" ALIGN="CENTER" HEIGHT="600"><A
 			 HREF="image17.html">Back<BR>17/21</A></TD> 
-		  <TD WIDTH="750" ALIGN="CENTER" HEIGHT="600"><IMG
+		  <TD WIDTH="750" ALIGN="CENTER" HEIGHT="600"><a href="../images/large/volume3/image18.jpg"><IMG
 			 SRC="../images/normal/volume3/image18.jpg" WIDTH="750" HEIGHT="496"
-			 BORDER="0"></TD> 
+			 BORDER="0"></a></TD> 
 		  <TD WIDTH="75" ALIGN="CENTER" HEIGHT="600"><A
 			 HREF="image19.html">Next<BR>19/21</A></TD> 
 		</TR> 
