--- a/qphotosupps/volume3/image12.html
+++ b/qphotosupps/volume3/image12.html
@@ -30,10 +30,10 @@
 			 <H4>December&nbsp;8,&nbsp;1970: Recording Christmas carols for John
 				Peel's Top Gear radio show, Boxing Day. (Back row, from left) Marc Bolan, Peel,
 				Robert Wyatt and Mike Ratledge (of Soft Machine), Rod Stewart and Kenney Jones
-				(of The Faces), unidentified Faces assistant. (Front row, from left)
+				(of Faces), unidentified Faces assistant. (Front row, from left)
 				unidentified friend of Sonja Cristina, Sonja Cristina (Curved Air, brought in
-				to replace Sandy Denny who'd pleaded illness), Ian MacLaghan, Ronnie Lane and
-				Ron Wood (of The Faces), Ivor Cutler. The session was conducted by Peel's
+				to replace Sandy Denny who'd pleaded illness), Ian MacLagan, Ronnie Lane, and
+				Ronnie Wood (of Faces), Ivor Cutler. The session was conducted by Peel's
 				producer John Walters and accompanied by David Bedford on piano. The session
 				sheet records the generous BBC fees paid, among them &pound;50 for The Faces,
 				&pound;44 for The Soft Machine, &pound;30 for Ivor Cutler but only a meagre
