--- a/qphotosupps/volume3/image12.html
+++ b/qphotosupps/volume3/image12.html
@@ -35,8 +35,8 @@
 				to replace Sandy Denny who'd pleaded illness), Ian MacLagan, Ronnie Lane, and
 				Ronnie Wood (of Faces), Ivor Cutler. The session was conducted by Peel's
 				producer John Walters and accompanied by David Bedford on piano. The session
-				sheet records the generous BBC fees paid, among them &pound;50 for The Faces,
-				&pound;44 for The Soft Machine, &pound;30 for Ivor Cutler but only a meagre
+				sheet records the generous BBC fees paid, among them &pound;50 for Faces,
+				&pound;44 for Soft Machine, &pound;30 for Ivor Cutler but only a meagre
 				&pound;20 for Marc Bolan.</H4></TD> 
 		  <TD WIDTH="75" ALIGN="CENTER"></TD> 
 		</TR> 
