--- a/jqe2014.html
+++ b/jqe2014.html
@@ -17,13 +17,13 @@
 	 </TABLE><BR> 
 	 <UL> 
 		<LI><A HREF="jqe2014/image1.jpg">Photo 1</A><IMG SRC="jqe2014/image1.jpg"></LI>
-		<LI><A HREF="jqe2014/image2.jpg">Photo 2</A></LI> 
-		<LI><A HREF="jqe2014/image3.jpg">Photo 3</A></LI> 
-		<LI><A HREF="jqe2014/image4.jpg">Photo 4</A></LI> 
-		<LI><A HREF="jqe2014/image5.jpg">Photo 5</A></LI> 
-		<LI><A HREF="jqe2014/image6.jpg">Photo 6</A></LI> 
-		<LI><A HREF="jqe2014/image7.jpg">Photo 7</A></LI> 
-		<LI><A HREF="jqe2014/image8.jpg">Photo 8</A></LI> 
-		<LI><A HREF="jqe2014/image9.jpg">Photo 9</A></LI> 
+		<LI><A HREF="jqe2014/image2.jpg">Photo 2</A><IMG SRC="jqe2014/image2.jpg"></LI> 
+		<LI><A HREF="jqe2014/image3.jpg">Photo 3</A><IMG SRC="jqe2014/image3.jpg"></LI> 
+		<LI><A HREF="jqe2014/image4.jpg">Photo 4</A><IMG SRC="jqe2014/image4.jpg"></LI> 
+		<LI><A HREF="jqe2014/image5.jpg">Photo 5</A><IMG SRC="jqe2014/image5.jpg"></LI> 
+		<LI><A HREF="jqe2014/image6.jpg">Photo 6</A><IMG SRC="jqe2014/image6.jpg"></LI> 
+		<LI><A HREF="jqe2014/image7.jpg">Photo 7</A><IMG SRC="jqe2014/image7.jpg"></LI> 
+		<LI><A HREF="jqe2014/image8.jpg">Photo 8</A><IMG SRC="jqe2014/image8.jpg"></LI> 
+		<LI><A HREF="jqe2014/image9.jpg">Photo 9</A><IMG SRC="jqe2014/image9.jpg"></LI> 
 	 </UL> </BODY>
 </HTML>
