--- a/gallery2.html
+++ b/gallery2.html
@@ -38,7 +38,7 @@
 					 HREF="http://www.guardian.co.uk/"><FONT COLOR="#FFFFFF"
 					 FACE="Trebuchet MS">GUARDIAN</FONT></A>&nbsp;</TD> 
 				  <TD HEIGHT="79" ALIGN="CENTER" VALIGN="MIDDLE"><A
-					 HREF="http://www.serco.com/investors/sharepricedata/index.asp"><FONT
+					 HREF="https://www.serco.com/investors/share-price-data"><FONT
 					 COLOR="#FFFFFF" FACE="Trebuchet MS">SERCO</FONT></A>&nbsp;</TD> 
 				  <TD HEIGHT="79" ALIGN="CENTER"
 				  VALIGN="MIDDLE"><NOBR><OBJECT TYPE="application/x-shockwave-flash"
