--- a/qphotosupps/volume4/image01.html
+++ b/qphotosupps/volume4/image01.html
@@ -17,9 +17,9 @@
 		</TR> 
 		<TR> 
 		  <TD WIDTH="75" ALIGN="CENTER" HEIGHT="600"></TD> 
-		  <TD WIDTH="750" ALIGN="CENTER" HEIGHT="600"><IMG
+			<TD WIDTH="750" ALIGN="CENTER" HEIGHT="600"><a href="../images/large/volume4/image1.jpg"><IMG
 			 SRC="../images/normal/volume4/image01.jpg" WIDTH="430" HEIGHT="600"
-			 BORDER="0"></TD> 
+			 BORDER="0"></a></TD> 
 		  <TD WIDTH="75" ALIGN="CENTER" HEIGHT="600"><A
 			 HREF="image02.html">Next<BR>02/28</A></TD> 
 		</TR> 
