--- a/qphotosupps/volume4/image02.html
+++ b/qphotosupps/volume4/image02.html
@@ -18,9 +18,9 @@
 		<TR> 
 		  <TD WIDTH="75" ALIGN="CENTER" HEIGHT="600"><A
 			 HREF="image01.html">Back<BR>01/28</A></TD> 
-		  <TD WIDTH="750" ALIGN="CENTER" HEIGHT="600"><IMG
+		  <TD WIDTH="750" ALIGN="CENTER" HEIGHT="600"><a href="../images/large/volume4/image2.jpg"><IMG
 			 SRC="../images/normal/volume4/image02.jpg" WIDTH="750" HEIGHT="511"
-			 BORDER="0"></TD> 
+			 BORDER="0"></a></TD> 
 		  <TD WIDTH="75" ALIGN="CENTER" HEIGHT="600"><A
 			 HREF="image03.html">Next<BR>03/28</A></TD> 
 		</TR> 
