--- a/qphotosupps/volume4/image08.html
+++ b/qphotosupps/volume4/image08.html
@@ -18,9 +18,9 @@
 		<TR> 
 		  <TD WIDTH="75" ALIGN="CENTER" HEIGHT="600"><A
 			 HREF="image07.html">Back<BR>07/28</A></TD> 
-		  <TD WIDTH="750" ALIGN="CENTER" HEIGHT="600"><IMG
+		  <TD WIDTH="750" ALIGN="CENTER" HEIGHT="600"><a href="../images/large/volume4/image8.jpg"><IMG
 			 SRC="../images/normal/volume4/image08.jpg" WIDTH="459" HEIGHT="600"
-			 BORDER="0"></TD> 
+			 BORDER="0"></a></TD> 
 		  <TD WIDTH="75" ALIGN="CENTER" HEIGHT="600"><A
 			 HREF="image09.html">Next<BR>09/28</A></TD> 
 		</TR> 
