--- a/qphotosupps/volume5/image14.html
+++ b/qphotosupps/volume5/image14.html
@@ -18,9 +18,9 @@
 		<TR> 
 		  <TD WIDTH="75" ALIGN="CENTER" HEIGHT="600"><A
 			 HREF="image13.html">Back<BR>13/31</A></TD> 
-		  <TD WIDTH="750" ALIGN="CENTER" HEIGHT="600"><IMG
+		  <TD WIDTH="750" ALIGN="CENTER" HEIGHT="600"><a href="../images/large/volume5/image14.jpg"><IMG
 			 SRC="../images/normal/volume5/image14.jpg" WIDTH="436" HEIGHT="600"
-			 BORDER="0"></TD> 
+			 BORDER="0"></a></TD> 
 		  <TD WIDTH="75" ALIGN="CENTER" HEIGHT="600"><A
 			 HREF="image15.html">Next<BR>15/31</A></TD> 
 		</TR> 
