--- a/qphotosupps/volume5/image16.html
+++ b/qphotosupps/volume5/image16.html
@@ -18,9 +18,9 @@
 		<TR> 
 		  <TD WIDTH="75" ALIGN="CENTER" HEIGHT="600"><A
 			 HREF="image15.html">Back<BR>15/31</A></TD> 
-		  <TD WIDTH="750" ALIGN="CENTER" HEIGHT="600"><IMG
+		  <TD WIDTH="750" ALIGN="CENTER" HEIGHT="600"><a href="../images/large/volume5/image16.jpg"><IMG
 			 SRC="../images/normal/volume5/image16.jpg" WIDTH="750" HEIGHT="474"
-			 BORDER="0"></TD> 
+			 BORDER="0"></a></TD> 
 		  <TD WIDTH="75" ALIGN="CENTER" HEIGHT="600"><A
 			 HREF="image17.html">Next<BR>17/31</A></TD> 
 		</TR> 
