--- a/qphotosupps/volume5/image17.html
+++ b/qphotosupps/volume5/image17.html
@@ -18,9 +18,9 @@
 		<TR> 
 		  <TD WIDTH="75" ALIGN="CENTER" HEIGHT="600"><A
 			 HREF="image16.html">Back<BR>16/31</A></TD> 
-		  <TD WIDTH="750" ALIGN="CENTER" HEIGHT="600"><IMG
+		  <TD WIDTH="750" ALIGN="CENTER" HEIGHT="600"><a href="../images/large/volume5/image17.jpg"><IMG
 			 SRC="../images/normal/volume5/image17.jpg" WIDTH="434" HEIGHT="600"
-			 BORDER="0"></TD> 
+			 BORDER="0"></a></TD> 
 		  <TD WIDTH="75" ALIGN="CENTER" HEIGHT="600"><A
 			 HREF="image18.html">Next<BR>18/31</A></TD> 
 		</TR> 
