--- a/qphotosupps/volume5/image23.html
+++ b/qphotosupps/volume5/image23.html
@@ -18,9 +18,9 @@
 		<TR> 
 		  <TD WIDTH="75" ALIGN="CENTER" HEIGHT="600"><A
 			 HREF="image22.html">Back<BR>22/31</A></TD> 
-		  <TD WIDTH="750" ALIGN="CENTER" HEIGHT="600"><IMG
+		  <TD WIDTH="750" ALIGN="CENTER" HEIGHT="600"><a href="../images/large/volume5/image23.jpg"><IMG
 			 SRC="../images/normal/volume5/image23.jpg" WIDTH="405" HEIGHT="600"
-			 BORDER="0"></TD> 
+			 BORDER="0"></a></TD> 
 		  <TD WIDTH="75" ALIGN="CENTER" HEIGHT="600"><A
 			 HREF="image24.html">Next<BR>24/31</A></TD> 
 		</TR> 
