--- a/qphotosupps/volume5/image24.html
+++ b/qphotosupps/volume5/image24.html
@@ -18,9 +18,9 @@
 		<TR> 
 		  <TD WIDTH="75" ALIGN="CENTER" HEIGHT="600"><A
 			 HREF="image23.html">Back<BR>23/31</A></TD> 
-		  <TD WIDTH="750" ALIGN="CENTER" HEIGHT="600"><IMG
+		  <TD WIDTH="750" ALIGN="CENTER" HEIGHT="600"><a href="../images/large/volume5/image24.jpg"><IMG
 			 SRC="../images/normal/volume5/image24.jpg" WIDTH="417" HEIGHT="600"
-			 BORDER="0"></TD> 
+			 BORDER="0"></a></TD> 
 		  <TD WIDTH="75" ALIGN="CENTER" HEIGHT="600"><A
 			 HREF="image25.html">Next<BR>25/31</A></TD> 
 		</TR> 
