--- a/qphotosupps/volume5/image25.html
+++ b/qphotosupps/volume5/image25.html
@@ -18,9 +18,9 @@
 		<TR> 
 		  <TD WIDTH="75" ALIGN="CENTER" HEIGHT="600"><A
 			 HREF="image24.html">Back<BR>24/31</A></TD> 
-		  <TD WIDTH="750" ALIGN="CENTER" HEIGHT="600"><IMG
+		  <TD WIDTH="750" ALIGN="CENTER" HEIGHT="600"><a href="../images/large/volume5/image25.jpg"><IMG
 			 SRC="../images/normal/volume5/image25.jpg" WIDTH="450" HEIGHT="600"
-			 BORDER="0"></TD> 
+			 BORDER="0"></a></TD> 
 		  <TD WIDTH="75" ALIGN="CENTER" HEIGHT="600"><A
 			 HREF="image26.html">Next<BR>26/31</A></TD> 
 		</TR> 
