--- a/qphotosupps/volume5/image26.html
+++ b/qphotosupps/volume5/image26.html
@@ -18,9 +18,9 @@
 		<TR> 
 		  <TD WIDTH="75" ALIGN="CENTER" HEIGHT="600"><A
 			 HREF="image25.html">Back<BR>25/31</A></TD> 
-		  <TD WIDTH="750" ALIGN="CENTER" HEIGHT="600"><IMG
+		  <TD WIDTH="750" ALIGN="CENTER" HEIGHT="600"><a href="../images/large/volume5/image26.jpg"><IMG
 			 SRC="../images/normal/volume5/image26.jpg" WIDTH="481" HEIGHT="600"
-			 BORDER="0"></TD> 
+			 BORDER="0"></a></TD> 
 		  <TD WIDTH="75" ALIGN="CENTER" HEIGHT="600"><A
 			 HREF="image27.html">Next<BR>27/31</A></TD> 
 		</TR> 
