--- a/qphotosupps/volume5/image29.html
+++ b/qphotosupps/volume5/image29.html
@@ -18,9 +18,9 @@
 		<TR> 
 		  <TD WIDTH="75" ALIGN="CENTER" HEIGHT="600"><A
 			 HREF="image28.html">Back<BR>28/31</A></TD> 
-		  <TD WIDTH="750" ALIGN="CENTER" HEIGHT="600"><IMG
+		  <TD WIDTH="750" ALIGN="CENTER" HEIGHT="600"><a href="../images/large/volume5/image29.jpg"><IMG
 			 SRC="../images/normal/volume5/image29.jpg" WIDTH="750" HEIGHT="497"
-			 BORDER="0"></TD> 
+			 BORDER="0"></a></TD> 
 		  <TD WIDTH="75" ALIGN="CENTER" HEIGHT="600"><A
 			 HREF="image30.html">Next<BR>30/31</A></TD> 
 		</TR> 
