--- a/qphotosupps/volume5/image30.html
+++ b/qphotosupps/volume5/image30.html
@@ -18,9 +18,9 @@
 		<TR> 
 		  <TD WIDTH="75" ALIGN="CENTER" HEIGHT="600"><A
 			 HREF="image29.html">Back<BR>29/31 </A></TD> 
-		  <TD WIDTH="750" ALIGN="CENTER" HEIGHT="600"><IMG
+		  <TD WIDTH="750" ALIGN="CENTER" HEIGHT="600"><a href="../images/large/volume5/image30.jpg"><IMG
 			 SRC="../images/normal/volume5/image30.jpg" WIDTH="506" HEIGHT="600"
-			 BORDER="0"></TD> 
+			 BORDER="0"></a></TD> 
 		  <TD WIDTH="75" ALIGN="CENTER" HEIGHT="600"><A
 			 HREF="image31.html">Next<BR>31/31</A></TD> 
 		</TR> 
