--- a/qphotosupps/volume8/image07.html
+++ b/qphotosupps/volume8/image07.html
@@ -18,9 +18,9 @@
 		<TR> 
 		  <TD WIDTH="75" ALIGN="CENTER" HEIGHT="600"><A
 			 HREF="image06.html">Back<BR>06/22</A></TD> 
-		  <TD WIDTH="750" ALIGN="CENTER" HEIGHT="600"><IMG
+		  <TD WIDTH="750" ALIGN="CENTER" HEIGHT="600"><a href="../images/large/volume8/image7.jpg"><IMG
 			 SRC="../images/normal/volume8/image07.jpg" WIDTH="484" HEIGHT="600"
-			 BORDER="0"></TD> 
+			 BORDER="0"></a></TD> 
 		  <TD WIDTH="75" ALIGN="CENTER" HEIGHT="600"><A
 			 HREF="image08.html">Next<BR>08/22</A></TD> 
 		</TR> 
