--- a/qphotosupps/volume8/image08.html
+++ b/qphotosupps/volume8/image08.html
@@ -18,9 +18,9 @@
 		<TR> 
 		  <TD WIDTH="75" ALIGN="CENTER" HEIGHT="600"><A
 			 HREF="image07.html">Back<BR>07/22</A></TD> 
-		  <TD WIDTH="750" ALIGN="CENTER" HEIGHT="600"><IMG
+		  <TD WIDTH="750" ALIGN="CENTER" HEIGHT="600"><a href="../images/large/volume8/image8.jpg"><IMG
 			 SRC="../images/normal/volume8/image08.jpg" WIDTH="441" HEIGHT="600"
-			 BORDER="0"></TD> 
+			 BORDER="0"></a></TD> 
 		  <TD WIDTH="75" ALIGN="CENTER" HEIGHT="600"><A
 			 HREF="image09.html">Next<BR>09/22</A></TD> 
 		</TR> 
