--- a/qphotosupps/volume8/image09.html
+++ b/qphotosupps/volume8/image09.html
@@ -18,9 +18,9 @@
 		<TR> 
 		  <TD WIDTH="75" ALIGN="CENTER" HEIGHT="600"><A
 			 HREF="image08.html">Back<BR>08/22</A></TD> 
-		  <TD WIDTH="750" ALIGN="CENTER" HEIGHT="600"><IMG
+		  <TD WIDTH="750" ALIGN="CENTER" HEIGHT="600"><a href="../images/large/volume8/image9.jpg"><IMG
 			 SRC="../images/normal/volume8/image09.jpg" WIDTH="496" HEIGHT="600"
-			 BORDER="0"></TD> 
+			 BORDER="0"></a></TD> 
 		  <TD WIDTH="75" ALIGN="CENTER" HEIGHT="600"><A
 			 HREF="image10.html">Next<BR>10/22</A></TD> 
 		</TR> 
