--- a/qphotosupps/volume8/image12.html
+++ b/qphotosupps/volume8/image12.html
@@ -18,9 +18,9 @@
 		<TR> 
 		  <TD WIDTH="75" ALIGN="CENTER" HEIGHT="600"><A
 			 HREF="image11.html">Back<BR>11/22</A></TD> 
-		  <TD WIDTH="750" ALIGN="CENTER" HEIGHT="600"><IMG
+		  <TD WIDTH="750" ALIGN="CENTER" HEIGHT="600"><a href="../images/large/volume8/image12.jpg"><IMG
 			 SRC="../images/normal/volume8/image12.jpg" WIDTH="394" HEIGHT="600"
-			 BORDER="0"></TD> 
+			 BORDER="0"></a></TD> 
 		  <TD WIDTH="75" ALIGN="CENTER" HEIGHT="600"><A
 			 HREF="image13.html">Next<BR>13/22</A></TD> 
 		</TR> 
