--- a/qphotosupps.html
+++ b/qphotosupps.html
@@ -65,7 +65,7 @@
 		  <TD HEIGHT="270" ALIGN="CENTER">  
 			 <P><FONT FACE="Arial"><BR><BR><BR></FONT></P> 
 			 <H4 ALIGN="RIGHT"><FONT FACE="Arial"><A
-				HREF="default.html">HOME</A></FONT></H4></TD> 
+				HREF="index.html">HOME</A></FONT></H4></TD> 
 		</TR> 
 	 </TABLE> </BODY>
 </HTML>
