--- a/work.html
+++ b/work.html
@@ -878,7 +878,7 @@
 		<TABLE BORDER="0"> 
 		  <TR> 
 			 <TD VALIGN="top" WIDTH="15%"><FONT FACE="Trebuchet MS"><A
-				HREF="http://www.nrlm.go.jp/apmp/"><IMG BORDER="2" WIDTH="120"
+				HREF="http://www.apmpweb.org/index.html"><IMG BORDER="2" WIDTH="120"
 				HEIGHT="122" SRC="images/apmp.gif"></A></FONT></TD> 
 			 <TD VALIGN="top" WIDTH="20%"><FONT FACE="Trebuchet MS"><A
 				HREF="http://www.nmij.jp/apmp/"><STRONG>A</STRONG>sia-<STRONG>P</STRONG>acific
