--- a/work.html
+++ b/work.html
@@ -881,18 +881,15 @@
 				HREF="http://www.apmpweb.org/index.html"><IMG BORDER="2" WIDTH="120"
 				HEIGHT="122" SRC="images/apmp.gif"></A></FONT></TD> 
 			 <TD VALIGN="top" WIDTH="20%"><FONT FACE="Trebuchet MS"><A
-				HREF="http://www.nmij.jp/apmp/"><STRONG>A</STRONG>sia-<STRONG>P</STRONG>acific
+				HREF="http://www.apmpweb.org/index.html"><STRONG>A</STRONG>sia-<STRONG>P</STRONG>acific
 				<STRONG>M</STRONG>etrology <STRONG>P</STRONG>rogramme</A></FONT></TD> 
-			 <TD VALIGN="top"><FONT FACE="Trebuchet MS">The Asia Pacific Metrology
-				Programme (APMP) is primarily responsible for developing international
-				recognition of the measurement capabilities of the region's national and
-				territorial measurement laboratories. APMP has been operating in the
-				Asia-Pacific since its inception as a Commonwealth Science Council initiative
-				in 1977. As such, it is the oldest continually operating metrological grouping
-				in the world. The program grew out of a need by participating members to
-				develop their metrological capability. It was based on a true collaborative
-				spirit of mutual assistance and sharing of expertise and information, and this
-				remains one of the major strengths of APMP to this day.</FONT></TD> 
+			 <TD VALIGN="top"><FONT FACE="Trebuchet MS">The Asia Pacific Metrology Programme (APMP) is 
+				 a grouping of national metrology institutes (NMIs) from the Asia-Pacific region 
+				 engaged in improving regional metrological capability through the sharing of expertise 
+				 and exchange of technical services among Member laboratories. APMP is also a Regional 
+				 Metrology Organization (RMO) recognized by the International Committee for Weights and 
+				 Measures (CIPM) for the purpose of worldwide mutual recognition of measurement 
+				 standards and of calibration and measurement certificates.</FONT></TD> 
 		  </TR> 
 		</TABLE><FONT FACE="Trebuchet MS"><FONT FACE="Arial"> </FONT> </FONT> 
 		<H5><FONT FACE="Trebuchet MS"></FONT></H5><FONT FACE="Trebuchet MS"><FONT
