--- a/work.html
+++ b/work.html
@@ -564,10 +564,10 @@
 		<TABLE BORDER="0"> 
 		  <TR> 
 			 <TD VALIGN="top" WIDTH="15%"><FONT FACE="Trebuchet MS"><A
-				HREF="http://www.bipm.fr/"><IMG BORDER="2" WIDTH="120" HEIGHT="119"
-				SRC="images/bipm.gif"></A> </FONT></TD> 
+				HREF="http://www.bipm.org/en"><IMG BORDER="2" WIDTH="120" HEIGHT="120"
+				SRC="https://upload.wikimedia.org/wikipedia/commons/thumb/1/10/Metric_seal.svg/548px-Metric_seal.svg.png"></A> </FONT></TD> 
 			 <TD VALIGN="top" WIDTH="20%"><FONT FACE="Trebuchet MS"><A
-				HREF="http://www.bipm.org/"><STRONG>B</STRONG>ureau
+				HREF="http://www.bipm.org/en"><STRONG>B</STRONG>ureau
 				<STRONG>I</STRONG>nternational des <STRONG>P</STRONG>oids et
 				<STRONG>M</STRONG>esures (International Office of Weights and Measures)</A>
 				</FONT></TD> 
