--- a/bwindex.html
+++ b/bwindex.html
@@ -686,7 +686,7 @@ document.images[imageID].src = eval(objectName + ".src");
 				HEIGHT="44" SRC="buttons/up/bw/nplmail.gif" NAME="nplmail"
 				ALT="To access NPL e-mail"></A></P> 
 			 <P ALIGN="center"><A
-				HREF="http://mail.blueyonder.co.uk/"
+				HREF="https://my.virginmedia.com/my-apps/email/mailbox"
 				ONMOUSEOVER="return MouseOver('webmail','down_webmail')"
 				ONMOUSEOUT="MouseOut('webmail','up_webmail')"><IMG BORDER="0" WIDTH="125"
 				HEIGHT="44" SRC="buttons/up/bw/webmail.gif" NAME="webmail"
