--- a/qphotosupps/volume6/image09.html
+++ b/qphotosupps/volume6/image09.html
@@ -18,9 +18,9 @@
 		<TR> 
 		  <TD WIDTH="75" ALIGN="CENTER" HEIGHT="600"><A
 			 HREF="image08.html">Back<BR>08/27</A></TD> 
-		  <TD WIDTH="750" ALIGN="CENTER" HEIGHT="600"><IMG
+		  <TD WIDTH="750" ALIGN="CENTER" HEIGHT="600"><a href="../images/large/volume6/image9.jpg"><IMG
 			 SRC="../images/normal/volume6/image09.jpg" WIDTH="750" HEIGHT="407"
-			 BORDER="0"></TD> 
+			 BORDER="0"></A></TD>
 		  <TD WIDTH="75" ALIGN="CENTER" HEIGHT="600"><A
 			 HREF="image10.html">Next<BR>10/27</A></TD> 
 		</TR> 
