--- a/qphotosupps/volume6/image13.html
+++ b/qphotosupps/volume6/image13.html
@@ -18,9 +18,9 @@
 		<TR> 
 		  <TD WIDTH="75" ALIGN="CENTER" HEIGHT="600"><A
 			 HREF="image12.html">Back<BR>12/27</A></TD> 
-		  <TD WIDTH="750" ALIGN="CENTER" HEIGHT="600"><IMG
+		  <TD WIDTH="750" ALIGN="CENTER" HEIGHT="600"><a href="../images/large/volume6/image13.jpg"><IMG
 			 SRC="../images/normal/volume6/image13.jpg" WIDTH="750" HEIGHT="464"
-			 BORDER="0"></TD> 
+			 BORDER="0"></A></TD> 
 		  <TD WIDTH="75" ALIGN="CENTER" HEIGHT="600"><A
 			 HREF="image14.html">Next<BR>14/27</A></TD> 
 		</TR> 
