--- a/qphotosupps/volume6/image18.html
+++ b/qphotosupps/volume6/image18.html
@@ -18,9 +18,9 @@
 		<TR> 
 		  <TD WIDTH="75" ALIGN="CENTER" HEIGHT="600"><A
 			 HREF="image17.html">Back<BR>17/27</A></TD> 
-		  <TD WIDTH="750" ALIGN="CENTER" HEIGHT="600"><IMG
+		  <TD WIDTH="750" ALIGN="CENTER" HEIGHT="600"><a href="../images/large/volume6/image18.jpg"><IMG
 			 SRC="../images/normal/volume6/image18.jpg" WIDTH="644" HEIGHT="600"
-			 BORDER="0"></TD> 
+			 BORDER="0"></A></TD> 
 		  <TD WIDTH="75" ALIGN="CENTER" HEIGHT="600"><A
 			 HREF="image19.html">Next<BR>19/27</A></TD> 
 		</TR> 
