--- a/qphotosupps/volume6/image19.html
+++ b/qphotosupps/volume6/image19.html
@@ -18,9 +18,9 @@
 		<TR> 
 		  <TD WIDTH="75" ALIGN="CENTER" HEIGHT="600"><A
 			 HREF="image18.html">Back<BR>18/27</A></TD> 
-		  <TD WIDTH="750" ALIGN="CENTER" HEIGHT="600"><IMG
+		  <TD WIDTH="750" ALIGN="CENTER" HEIGHT="600"><a href="../images/large/volume6/image19.jpg"><IMG
 			 SRC="../images/normal/volume6/image19.jpg" WIDTH="750" HEIGHT="455"
-			 BORDER="0"></TD> 
+			 BORDER="0"></A></TD> 
 		  <TD WIDTH="75" ALIGN="CENTER" HEIGHT="600"><A
 			 HREF="image20.html">Next<BR>20/27</A></TD> 
 		</TR> 
