--- a/qphotosupps/volume6/image23.html
+++ b/qphotosupps/volume6/image23.html
@@ -18,9 +18,9 @@
 		<TR> 
 		  <TD WIDTH="75" ALIGN="CENTER" HEIGHT="600"><A
 			 HREF="image22.html">Back<BR>22/27</A></TD> 
-		  <TD WIDTH="750" ALIGN="CENTER" HEIGHT="600"><IMG
+		  <TD WIDTH="750" ALIGN="CENTER" HEIGHT="600"><a href="../images/large/volume6/image23.jpg"><IMG
 			 SRC="../images/normal/volume6/image23.jpg" WIDTH="750" HEIGHT="450"
-			 BORDER="0"></TD> 
+			 BORDER="0"></A></TD> 
 		  <TD WIDTH="75" ALIGN="CENTER" HEIGHT="600"><A
 			 HREF="image24.html">Next<BR>24/27</A></TD> 
 		</TR> 
