--- a/qphotosupps/volume6/image24.html
+++ b/qphotosupps/volume6/image24.html
@@ -18,9 +18,9 @@
 		<TR> 
 		  <TD WIDTH="75" ALIGN="CENTER" HEIGHT="600"><A
 			 HREF="image23.html">Back<BR>23/27</A></TD> 
-		  <TD WIDTH="750" ALIGN="CENTER" HEIGHT="600"><IMG
+		  <TD WIDTH="750" ALIGN="CENTER" HEIGHT="600"><a href="../images/large/volume6/image24.jpg"><IMG
 			 SRC="../images/normal/volume6/image24.jpg" WIDTH="750" HEIGHT="485"
-			 BORDER="0"></TD> 
+			 BORDER="0"></A></TD> 
 		  <TD WIDTH="75" ALIGN="CENTER" HEIGHT="600"><A
 			 HREF="image25.html">Next<BR>25/27</A></TD> 
 		</TR> 
