--- a/qphotosupps/volume7/image03.html
+++ b/qphotosupps/volume7/image03.html
@@ -18,9 +18,9 @@
 		<TR> 
 		  <TD WIDTH="75" ALIGN="CENTER" HEIGHT="600"><A
 			 HREF="image02.html">Back<BR>02/28</A></TD> 
-		  <TD WIDTH="750" ALIGN="CENTER" HEIGHT="600"><IMG
+		  <TD WIDTH="750" ALIGN="CENTER" HEIGHT="600"><a href="../images/large/volume7/image3.jpg"><IMG
 			 SRC="../images/normal/volume7/image03.jpg" WIDTH="520" HEIGHT="600"
-			 BORDER="0"></TD> 
+			 BORDER="0"></A></TD> 
 		  <TD WIDTH="75" ALIGN="CENTER" HEIGHT="600"><A
 			 HREF="image04.html">Next<BR>04/28</A></TD> 
 		</TR> 
