--- a/qphotosupps/volume9/image10.html
+++ b/qphotosupps/volume9/image10.html
@@ -18,9 +18,9 @@
 		<TR> 
 		  <TD WIDTH="75" ALIGN="CENTER" HEIGHT="600"><A
 			 HREF="image09.html">Back<BR>09/22</A></TD> 
-		  <TD WIDTH="750" ALIGN="CENTER" HEIGHT="600"><IMG
+		  <TD WIDTH="750" ALIGN="CENTER" HEIGHT="600"><a href="../images/large/volume9/image10.jpg"><IMG
 			 SRC="../images/normal/volume9/image10.jpg" BORDER="0" WIDTH="750"
-			 HEIGHT="485"></TD> 
+			 HEIGHT="485"></A></TD> 
 		  <TD WIDTH="75" ALIGN="CENTER" HEIGHT="600"><A
 			 HREF="image11.html">Next<BR>11/22</A></TD> 
 		</TR> 
