--- a/qphotosupps/volume9/image12.html
+++ b/qphotosupps/volume9/image12.html
@@ -18,9 +18,9 @@
 		<TR> 
 		  <TD WIDTH="75" ALIGN="CENTER" HEIGHT="600"><A
 			 HREF="image11.html">Back<BR>11/22</A></TD> 
-		  <TD WIDTH="750" ALIGN="CENTER" HEIGHT="600"><IMG
+		  <TD WIDTH="750" ALIGN="CENTER" HEIGHT="600"><a href="../images/large/volume9/image12.jpg"><IMG
 			 SRC="../images/normal/volume9/image12.jpg" BORDER="0" WIDTH="749"
-			 HEIGHT="500"></TD> 
+			 HEIGHT="500"></A></TD> 
 		  <TD WIDTH="75" ALIGN="CENTER" HEIGHT="600"><A
 			 HREF="image13.html">Next<BR>13/22</A></TD> 
 		</TR> 
