--- a/qphotosupps/volume9/image14.html
+++ b/qphotosupps/volume9/image14.html
@@ -18,9 +18,9 @@
 		<TR> 
 		  <TD WIDTH="75" ALIGN="CENTER" HEIGHT="600"><A
 			 HREF="image13.html">Back<BR>13/22</A></TD> 
-		  <TD WIDTH="750" ALIGN="CENTER" HEIGHT="600"><IMG
+		  <TD WIDTH="750" ALIGN="CENTER" HEIGHT="600"><a href="../images/large/volume9/image14.jpg"><IMG
 			 SRC="../images/normal/volume9/image14.jpg" BORDER="0" WIDTH="750"
-			 HEIGHT="527"></TD> 
+			 HEIGHT="527"></A></TD> 
 		  <TD WIDTH="75" ALIGN="CENTER" HEIGHT="600"><A
 			 HREF="image15.html">Next<BR>15/22</A></TD> 
 		</TR> 
