--- a/qphotosupps/volume9/image17.html
+++ b/qphotosupps/volume9/image17.html
@@ -18,9 +18,9 @@
 		<TR> 
 		  <TD WIDTH="75" ALIGN="CENTER" HEIGHT="600"><A
 			 HREF="image16.html">Back<BR>16/22</A></TD> 
-		  <TD WIDTH="750" ALIGN="CENTER" HEIGHT="600"><IMG
+		  <TD WIDTH="750" ALIGN="CENTER" HEIGHT="600"><a href="../images/large/volume9/image17.jpg"><IMG
 			 SRC="../images/normal/volume9/image17.jpg" BORDER="0" WIDTH="749"
-			 HEIGHT="568"></TD> 
+			 HEIGHT="568"></A></TD> 
 		  <TD WIDTH="75" ALIGN="CENTER" HEIGHT="600"><A
 			 HREF="image18.html">Next<BR>18/22</A></TD> 
 		</TR> 
