--- a/qphotosupps/volume10/image03.html
+++ b/qphotosupps/volume10/image03.html
@@ -18,9 +18,9 @@
 		<TR> 
 		  <TD WIDTH="75" ALIGN="CENTER" HEIGHT="600"><A
 			 HREF="image02.html">Back<BR>02/24</A></TD> 
-		  <TD WIDTH="750" ALIGN="CENTER" HEIGHT="600"><IMG
+		  <TD WIDTH="750" ALIGN="CENTER" HEIGHT="600"><a href="../images/large/volume10/image3.jpg"><IMG
 			 SRC="../images/normal/volume10/image03.jpg" BORDER="0" WIDTH="494"
-			 HEIGHT="600"></TD> 
+			 HEIGHT="600"></A></TD> 
 		  <TD WIDTH="75" ALIGN="CENTER" HEIGHT="600"><A
 			 HREF="image04.html">Next<BR>04/24</A></TD> 
 		</TR> 
