--- a/qphotosupps/volume10/image21.html
+++ b/qphotosupps/volume10/image21.html
@@ -18,9 +18,9 @@
 		<TR> 
 		  <TD WIDTH="75" ALIGN="CENTER" HEIGHT="600"><A
 			 HREF="image20.html">Back<BR>20/24</A></TD> 
-		  <TD WIDTH="750" ALIGN="CENTER" HEIGHT="600"><IMG
+		  <TD WIDTH="750" ALIGN="CENTER" HEIGHT="600"><a href="../images/large/volume10/image21.jpg"><IMG
 			 SRC="../images/normal/volume10/image21.jpg" BORDER="0" WIDTH="749"
-			 HEIGHT="440"></TD> 
+			 HEIGHT="440"></A></TD> 
 		  <TD WIDTH="75" ALIGN="CENTER" HEIGHT="600"><A
 			 HREF="image22.html">Next<BR>22/24</A></TD> 
 		</TR> 
