--- a/qphotosupps/volume10/image23.html
+++ b/qphotosupps/volume10/image23.html
@@ -18,9 +18,9 @@
 		<TR> 
 		  <TD WIDTH="75" ALIGN="CENTER" HEIGHT="600"><A
 			 HREF="image22.html">Back<BR>22/24</A></TD> 
-		  <TD WIDTH="750" ALIGN="CENTER" HEIGHT="600"><IMG
+		  <TD WIDTH="750" ALIGN="CENTER" HEIGHT="600"><a href="../images/large/volume10/image23.jpg"><IMG
 			 SRC="../images/normal/volume10/image23.jpg" BORDER="0" WIDTH="499"
-			 HEIGHT="600"></TD> 
+			 HEIGHT="600"></A></TD> 
 		  <TD WIDTH="75" ALIGN="CENTER" HEIGHT="600"><A
 			 HREF="image24.html">Next<BR>24/24</A></TD> 
 		</TR> 
