--- a/qphotosupps/volume11/image08.html
+++ b/qphotosupps/volume11/image08.html
@@ -18,9 +18,9 @@
 		<TR> 
 		  <TD WIDTH="75" ALIGN="CENTER" HEIGHT="600"><A
 			 HREF="image07.html">Back<BR>07/25</A></TD> 
-		  <TD WIDTH="750" ALIGN="CENTER" HEIGHT="600"><IMG
+		  <TD WIDTH="750" ALIGN="CENTER" HEIGHT="600"><a href="../images/large/volume11/image8.jpg"><IMG
 			 SRC="../images/normal/volume11/image08.jpg" BORDER="0" WIDTH="487"
-			 HEIGHT="600"></TD> 
+			 HEIGHT="600"></A></TD> 
 		  <TD WIDTH="75" ALIGN="CENTER" HEIGHT="600"><A
 			 HREF="image09.html">Next<BR>09/25</A></TD> 
 		</TR> 
