--- a/qphotosupps/volume11/image15.html
+++ b/qphotosupps/volume11/image15.html
@@ -18,9 +18,9 @@
 		<TR> 
 		  <TD WIDTH="75" ALIGN="CENTER" HEIGHT="600"><A
 			 HREF="image14.html">Back<BR>14/25</A></TD> 
-		  <TD WIDTH="750" ALIGN="CENTER" HEIGHT="600"><IMG
+		  <TD WIDTH="750" ALIGN="CENTER" HEIGHT="600"><a href="../images/large/volume11/image15.jpg"><IMG
 			 SRC="../images/normal/volume11/image15.jpg" BORDER="0" WIDTH="750"
-			 HEIGHT="459"></TD> 
+			 HEIGHT="459"></A></TD> 
 		  <TD WIDTH="75" ALIGN="CENTER" HEIGHT="600"><A
 			 HREF="image16.html">Next<BR>16/25</A></TD> 
 		</TR> 
