--- a/qphotosupps/volume11/image23.html
+++ b/qphotosupps/volume11/image23.html
@@ -18,9 +18,9 @@
 		<TR> 
 		  <TD WIDTH="75" ALIGN="CENTER" HEIGHT="600"><A
 			 HREF="image22.html">Back<BR>22/25</A></TD> 
-		  <TD WIDTH="750" ALIGN="CENTER" HEIGHT="600"><IMG
+		  <TD WIDTH="750" ALIGN="CENTER" HEIGHT="600"><a href="../images/large/volume11/image23.jpg"><IMG
 			 SRC="../images/normal/volume11/image23.jpg" BORDER="0" WIDTH="750"
-			 HEIGHT="586"></TD> 
+			 HEIGHT="586"></A></TD> 
 		  <TD WIDTH="75" ALIGN="CENTER" HEIGHT="600"><A
 			 HREF="image24.html">Next<BR>24/25</A></TD> 
 		</TR> 
