--- a/qphotosupps/volume11/image24.html
+++ b/qphotosupps/volume11/image24.html
@@ -18,9 +18,9 @@
 		<TR> 
 		  <TD WIDTH="75" ALIGN="CENTER" HEIGHT="600"><A
 			 HREF="image23.html">Back<BR>23/25</A></TD> 
-		  <TD WIDTH="750" ALIGN="CENTER" HEIGHT="600"><IMG
+		  <TD WIDTH="750" ALIGN="CENTER" HEIGHT="600"><a href="../images/large/volume11/image24.jpg"><IMG
 			 SRC="../images/normal/volume11/image24.jpg" BORDER="0" WIDTH="750"
-			 HEIGHT="451"></TD> 
+			 HEIGHT="451"></A></TD> 
 		  <TD WIDTH="75" ALIGN="CENTER" HEIGHT="600"><A
 			 HREF="image25.html">Next<BR>25/25</A></TD> 
 		</TR> 
