--- a/bwindex.html
+++ b/bwindex.html
@@ -458,7 +458,7 @@ document.images[imageID].src = eval(objectName + ".src");
 				ONMOUSEOUT="MouseOut('bikeradar','up_bikeradar')"><IMG BORDER="0" WIDTH="125"
 				HEIGHT="38" SRC="buttons/up/bw/bikeradar.gif" NAME="bikeradar"></A></P> 
 			 <P ALIGN="center"><A
-				HREF="http://www.cambridge-united.premiumtv.co.uk/page/Home/"
+				HREF="http://www.cambridge-united.co.uk/page/Home/"
 				ONMOUSEOVER="return MouseOver('cufc','down_cufc')"
 				ONMOUSEOUT="MouseOut('cufc','up_cufc')"><IMG BORDER="0" WIDTH="125"
 				SRC="buttons/up/bw/cufc.gif" NAME="cufc" HEIGHT="59"></A></P> 
