--- a/bwindex.html
+++ b/bwindex.html
@@ -475,7 +475,7 @@ document.images[imageID].src = eval(objectName + ".src");
 				ONMOUSEOVER="return MouseOver('evans','down_evans')"
 				ONMOUSEOUT="MouseOut('evans','up_evans')"><IMG BORDER="0" WIDTH="125"
 				HEIGHT="40" SRC="buttons/up/bw/evans.gif" NAME="evans"></A></P> 
-			 <P ALIGN="center"><A HREF="https://www.parkrun.org.uk/bushy/"
+			 <P ALIGN="center"><A HREF="https://www.parkrun.org.uk/bushy/results/athletehistory/?athleteNumber=7108395"
 				ONMOUSEOVER="return MouseOver('parkrun','down_parkrun')"
 				ONMOUSEOUT="MouseOut('parkrun','up_parkrun')"><IMG
 				BORDER="0" WIDTH="125" SRC="buttons/up/bw/parkrun-up-bw.gif" NAME="parkrun"
