--- a/index.html
+++ b/index.html
@@ -209,21 +209,6 @@ up_skysport.src="buttons/up/skysport.gif";
 down_skysport=new Image();
 down_skysport.src="buttons/down/skysport.gif";
 
-up_pcformat=new Image();
-up_pcformat.src="buttons/up/pcformat.gif";
-down_pcformat=new Image();
-down_pcformat.src="buttons/down/pcformat.gif";
-
-up_pcplus=new Image();
-up_pcplus.src="buttons/up/pcplus.gif";
-down_pcplus=new Image();
-down_pcplus.src="buttons/down/pcplus.gif";
-
-up_pcpro=new Image();
-up_pcpro.src="buttons/up/pcpro.gif";
-down_pcpro=new Image();
-down_pcpro.src="buttons/down/pcpro.gif";
-
 up_webmail=new Image();
 up_webmail.src="buttons/up/webmail.gif";
 down_webmail=new Image();
@@ -488,20 +473,7 @@ document.images[imageID].src = eval(objectName + ".src");
 			 <P ALIGN="center"><A HREF="http://www.wiggle.co.uk"
 				ONMOUSEOVER="return MouseOver('wiggle','down_wiggle')"
 				ONMOUSEOUT="MouseOut('wiggle','up_wiggle')"><IMG BORDER="0" WIDTH="125"
-				HEIGHT="82" SRC="buttons/up/wiggle.gif" NAME="wiggle"></A></P> 
-			 <P ALIGN="center"><A HREF="http://www.netflix.com"
-				ONMOUSEOVER="return MouseOver('netflix','down_netflix')"
-				ONMOUSEOUT="MouseOut('netflix','up_netflix')"><IMG BORDER="0" WIDTH="125"
-				HEIGHT="47" SRC="buttons/up/netflix.gif" NAME="netflix"></A></P> 
-			 <P ALIGN="center"><A
-				HREF="https://app.plex.tv/web/app"
-				ONMOUSEOVER="return MouseOver('plex','down_plex')"
-				ONMOUSEOUT="MouseOut('plex','up_plex')"><IMG BORDER="0" WIDTH="125" HEIGHT="59"
-				SRC="buttons/up/plex.gif" NAME="plex"></A></P> 
-			 <P ALIGN="center"><A HREF="http://www.youtube.com/"
-				ONMOUSEOVER="return MouseOver('youtube','down_youtube')"
-				ONMOUSEOUT="MouseOut('youtube','up_youtube')"><IMG BORDER="0" WIDTH="125"
-				HEIGHT="58" SRC="buttons/up/youtube.gif" NAME="youtube"></A></P> </TD> 
+				HEIGHT="82" SRC="buttons/up/wiggle.gif" NAME="wiggle"></A></P> </TD> 
 		  <TD VALIGN="TOP" ALIGN="CENTER" BGCOLOR="#EEEEEE"> 
 			 <P ALIGN="center"><A HREF="http://www.google.co.uk/"
 				ONMOUSEOVER="return MouseOver('google','down_google')"
@@ -669,10 +641,6 @@ document.images[imageID].src = eval(objectName + ".src");
 				ONMOUSEOUT="MouseOut('webmail','up_webmail')"><IMG BORDER="0" WIDTH="125"
 				HEIGHT="44" SRC="buttons/up/webmail.gif" NAME="webmail"
 				ALT="Webmail from Virgin media"></A></P> 
-			 <P ALIGN="center"><A HREF="http://www.pcpro.co.uk/"
-				ONMOUSEOVER="return MouseOver('pcpro','down_pcpro')"
-				ONMOUSEOUT="MouseOut('pcpro','up_pcpro')"><IMG BORDER="0" WIDTH="125"
-				HEIGHT="65" SRC="buttons/up/pcpro.gif" NAME="pcpro"></A></P>
 			 <P ALIGN="center"><A HREF="http://www.virginmedia.com/"
 				ONMOUSEOVER="return MouseOver('vmedia','down_vmedia')"
 				ONMOUSEOUT="MouseOut('vmedia','up_vmedia')"><IMG BORDER="0" WIDTH="125"
@@ -684,7 +652,19 @@ document.images[imageID].src = eval(objectName + ".src");
 			 <P ALIGN="center"><A HREF="http://www.hmhb.co.uk/"
 				ONMOUSEOVER="return MouseOver('hmhb','down_hmhb')"
 				ONMOUSEOUT="MouseOut('hmhb','up_hmhb')"><IMG BORDER="0" WIDTH="125" HEIGHT="60"
-				SRC="buttons/up/hmhb.gif" NAME="hmhb"></A></P></TD> 
+				SRC="buttons/up/hmhb.gif" NAME="hmhb"></A></P>			 <P ALIGN="center"><A HREF="http://www.netflix.com"
+				ONMOUSEOVER="return MouseOver('netflix','down_netflix')"
+				ONMOUSEOUT="MouseOut('netflix','up_netflix')"><IMG BORDER="0" WIDTH="125"
+				HEIGHT="47" SRC="buttons/up/netflix.gif" NAME="netflix"></A></P> 
+			 <P ALIGN="center"><A
+				HREF="https://app.plex.tv/web/app"
+				ONMOUSEOVER="return MouseOver('plex','down_plex')"
+				ONMOUSEOUT="MouseOut('plex','up_plex')"><IMG BORDER="0" WIDTH="125" HEIGHT="59"
+				SRC="buttons/up/plex.gif" NAME="plex"></A></P> 
+			 <P ALIGN="center"><A HREF="http://www.youtube.com/"
+				ONMOUSEOVER="return MouseOver('youtube','down_youtube')"
+				ONMOUSEOUT="MouseOut('youtube','up_youtube')"><IMG BORDER="0" WIDTH="125"
+				HEIGHT="58" SRC="buttons/up/youtube.gif" NAME="youtube"></A></P> </TD> 
 		</TR> 
 	 </TABLE> </BODY>
 </HTML>
