--- a/index.html
+++ b/index.html
@@ -493,7 +493,7 @@ document.images[imageID].src = eval(objectName + ".src");
 				ONMOUSEOUT="MouseOut('imdb','up_imdb')"><IMG BORDER="0" WIDTH="125" HEIGHT="59"
 				SRC="buttons/up/imdb.gif" NAME="imdb"></A></P> 
 			 <P ALIGN="center"><A
-				HREF="https://www.national-lottery.co.uk/player/p/results/lotto.ftl"
+				HREF="https://www.national-lottery.co.uk/"
 				ONMOUSEOVER="return MouseOver('results','down_results')"
 				ONMOUSEOUT="MouseOut('results','up_results')"><IMG BORDER="0" WIDTH="125"
 				HEIGHT="58" SRC="buttons/up/lottery.gif" NAME="results"></A></P> 
