--- a/index.html
+++ b/index.html
@@ -478,7 +478,11 @@ document.images[imageID].src = eval(objectName + ".src");
 			 <P ALIGN="center"><A HREF="http://www.wiggle.co.uk"
 				ONMOUSEOVER="return MouseOver('wiggle','down_wiggle')"
 				ONMOUSEOUT="MouseOut('wiggle','up_wiggle')"><IMG BORDER="0" WIDTH="125"
-				HEIGHT="82" SRC="buttons/up/wiggle.gif" NAME="wiggle"></A></P> </TD> 
+				HEIGHT="82" SRC="buttons/up/wiggle.gif" NAME="wiggle"></A></P>
+			 <P ALIGN="center"><A HREF="http://en.wikipedia.org"
+				ONMOUSEOVER="return MouseOver('wiki','down_wiki')"
+				ONMOUSEOUT="MouseOut('wiki','up_wiki')"><IMG BORDER="0" WIDTH="125"
+				SRC="buttons/up/wiki.gif" NAME="wiki" HEIGHT="123"></A></P></TD> 
 		  <TD VALIGN="TOP" ALIGN="CENTER" BGCOLOR="#EEEEEE"> 
 			 <P ALIGN="center"><A HREF="http://www.google.co.uk/"
 				ONMOUSEOVER="return MouseOver('google','down_google')"
@@ -556,11 +560,7 @@ document.images[imageID].src = eval(objectName + ".src");
 				ONMOUSEOVER="return MouseOver('abbey','down_abbey')"
 				ONMOUSEOUT="MouseOut('abbey','up_abbey')"><IMG BORDER="0" WIDTH="125"
 				HEIGHT="39" SRC="buttons/up/abbey.gif" ALT="Santander e-banking"
-				NAME="abbey"></A></P>
-			 <P ALIGN="center"><A HREF="http://en.wikipedia.org"
-				ONMOUSEOVER="return MouseOver('wiki','down_wiki')"
-				ONMOUSEOUT="MouseOut('wiki','up_wiki')"><IMG BORDER="0" WIDTH="125"
-				SRC="buttons/up/wiki.gif" NAME="wiki" HEIGHT="123"></A></P> </TD> 
+				NAME="abbey"></A></P></TD> 
 		  <TD VALIGN="TOP" ALIGN="CENTER" BGCOLOR="#EEEEEE"> 
 			 <P ALIGN="center"><A HREF="http://www.amazon.co.uk/"
 				ONMOUSEOVER="return MouseOver('amazon','down_amazon')"
