--- a/bwindex.html
+++ b/bwindex.html
@@ -144,10 +144,10 @@ up_sportstracker.src="buttons/up/bw/sportstracker.gif";
 down_sportstracker=new Image();
 down_sportstracker.src="buttons/down/sportstracker.gif";
 
-up_b3ta=new Image();
-up_b3ta.src="buttons/up/bw/b3ta.gif";
-down_b3ta=new Image();
-down_b3ta.src="buttons/down/b3ta.gif";
+up_disney=new Image();
+up_disney.src="buttons/up/bw/disney.gif";
+down_disney=new Image();
+down_disney.src="buttons/down/disney.gif";
 
 up_imdb=new Image();
 up_imdb.src="buttons/up/bw/imdb.gif";
@@ -560,7 +560,15 @@ document.images[imageID].src = eval(objectName + ".src");
 				ONMOUSEOVER="return MouseOver('abbey','down_abbey')"
 				ONMOUSEOUT="MouseOut('abbey','up_abbey')"><IMG BORDER="0" WIDTH="125"
 				HEIGHT="39" SRC="buttons/up/bw/abbey.gif" ALT="Santander e-banking"
-				NAME="abbey"></A></P></TD> 
+				NAME="abbey"></A></P>
+			 <P ALIGN="center"><A HREF="http://www.bobdylan.com/"
+				ONMOUSEOVER="return MouseOver('dylan','down_dylan')"
+				ONMOUSEOUT="MouseOut('dylan','up_dylan')"><IMG BORDER="0" WIDTH="125"
+				HEIGHT="28" SRC="buttons/up/bw/dylan.gif" NAME="dylan"></A></P> 
+			 <P ALIGN="center"><A HREF="http://www.hmhb.co.uk/"
+				ONMOUSEOVER="return MouseOver('hmhb','down_hmhb')"
+				ONMOUSEOUT="MouseOut('hmhb','up_hmhb')"><IMG BORDER="0" WIDTH="125" HEIGHT="60"
+				SRC="buttons/up/bw/hmhb.gif" NAME="hmhb"></A></P></TD> 
 		  <TD VALIGN="TOP" ALIGN="CENTER" BGCOLOR="#EEEEEE"> 
 			 <P ALIGN="center"><A HREF="http://www.amazon.co.uk/"
 				ONMOUSEOVER="return MouseOver('amazon','down_amazon')"
@@ -599,10 +607,6 @@ document.images[imageID].src = eval(objectName + ".src");
 				ONMOUSEOUT="MouseOut('qphotos','up_qphotos')"><IMG BORDER="0" WIDTH="125"
 				HEIGHT="49" SRC="buttons/up/bw/qphotos.gif" NAME="qphotos"></A></P> </TD> 
 		  <TD VALIGN="TOP" ALIGN="CENTER" BGCOLOR="#EEEEEE"> 
-			 <P ALIGN="center"><A HREF="http://www.b3ta.com"
-				ONMOUSEOVER="return MouseOver('b3ta','down_b3ta')"
-				ONMOUSEOUT="MouseOut('b3ta','up_b3ta')"><IMG BORDER="0" WIDTH="125"
-				SRC="buttons/up/bw/b3ta.gif" NAME="b3ta" HEIGHT="52"></A></P> 
 			 <P ALIGN="CENTER"><A HREF="https://www.britishairways.com/travel/echome/execclub/_gf/en_gb?source=MNVEXC3_my_executive_club"
 				ONMOUSEOVER="return MouseOver('ba','down_ba')"
 				ONMOUSEOUT="MouseOut('ba','up_ba')"><IMG BORDER="0" WIDTH="125"
@@ -655,15 +659,11 @@ document.images[imageID].src = eval(objectName + ".src");
 				ONMOUSEOVER="return MouseOver('vmedia','down_vmedia')"
 				ONMOUSEOUT="MouseOut('vmedia','up_vmedia')"><IMG BORDER="0" WIDTH="125"
 				HEIGHT="79" SRC="buttons/up/bw/vmedia.gif" NAME="vmedia"></A></P> 
-			 <P ALIGN="center"><A HREF="http://www.bobdylan.com/"
-				ONMOUSEOVER="return MouseOver('dylan','down_dylan')"
-				ONMOUSEOUT="MouseOut('dylan','up_dylan')"><IMG BORDER="0" WIDTH="125"
-				HEIGHT="28" SRC="buttons/up/bw/dylan.gif" NAME="dylan"></A></P> 
-			 <P ALIGN="center"><A HREF="http://www.hmhb.co.uk/"
-				ONMOUSEOVER="return MouseOver('hmhb','down_hmhb')"
-				ONMOUSEOUT="MouseOut('hmhb','up_hmhb')"><IMG BORDER="0" WIDTH="125" HEIGHT="60"
-				SRC="buttons/up/bw/hmhb.gif" NAME="hmhb"></A></P>
-				 			 <P ALIGN="center"><A HREF="http://www.netflix.com"
+			 <P ALIGN="center"><A HREF="http://www.disneyplus.com"
+				ONMOUSEOVER="return MouseOver('disney','down_disney')"
+				ONMOUSEOUT="MouseOut('disney','up_disney')"><IMG BORDER="0" WIDTH="125"
+				SRC="buttons/up/bw/disney.gif" NAME="disney" HEIGHT="74"></A></P>
+			 <P ALIGN="center"><A HREF="http://www.netflix.com"
 				ONMOUSEOVER="return MouseOver('netflix','down_netflix')"
 				ONMOUSEOUT="MouseOut('netflix','up_netflix')"><IMG BORDER="0" WIDTH="125"
 				HEIGHT="47" SRC="buttons/up/bw/netflix.gif" NAME="netflix"></A></P> 
